--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "study",
-  "version": "1.0.0",
+  "name": "my_db",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "author": "KYH",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.10.15"
   }
 }
