--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "backend": "nodemon index.js"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.15"
