--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.32",
     "mongoose": "^5.10.15"
   },
   "devDependencies": {
