--- a/Vote/.vscode/settings.json
+++ b/Vote/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "c:\\Users\\dlthd\\OneDrive\\바탕 화면\\Project\\Vote\\myvenv\\Scripts\\python.exe"
+    "python.pythonPath": "myvenv\\Scripts\\python.exe"
 }
